force-app/main/default/objects/Escalation_Contact__c/Escalation_Contact__c.object-meta.xml
<CustomObject>
    <label>Escalation Contact</label>
    <nameField>
        <displayFormat>EC-{000000000}</displayFormat>
        <label>Escalation Contact#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalation Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>