force-app/main/default/objects/Escalation_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Escalation Contacts</relationshipLabel>
    <relationshipName>Escalation_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>