force-app/main/default/objects/Escalation_Contact__c/fields/Escalation_Request__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalation Request</label>
    <referenceTo>Escalation_Request__c</referenceTo>
    <relationshipLabel>Escalation Contacts</relationshipLabel>
    <relationshipName>Escalation_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>